Bugs on translations and some small fixes on mobile for admin

--- a/src/Elcodi/Admin/CoreBundle/Resources/public/css/devices/_tablet.scss
+++ b/src/Elcodi/Admin/CoreBundle/Resources/public/css/devices/_tablet.scss
@@ -4,4 +4,5 @@
 	@include papa-sidebar;
 	@include papa-section-header;
 	@include papa-air;
+	@include papa-dashboard-tabs;
 }
